fix button alignment

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -94,4 +94,5 @@ div.button, div.checker, div.radio, div.selector, div.uploader {
 .btn-primary{
     background-color: #424349 !important;
     border-color: #424349 !important;
+    margin-left: 15px;
 }
